DON-1194: Fix wrong font size in donation start

--- a/src/app/donation-start/donation-start-form/donation-start-form.component.scss
+++ b/src/app/donation-start/donation-start-form/donation-start-form.component.scss
@@ -31,7 +31,6 @@
   margin-bottom: -1em;
   text-align: center;
   .total {
-    font-size: 20px;
     font-weight: bold;
     color: abstract.$colour-primary;
   }
@@ -62,6 +61,7 @@ div.mat-step-label.mat-step-label-selected {
   font-size: 17px !important;
   line-height: 20px;
   @media #{abstract.$breakpoint-lg} {
+    font-size: 20px !important;
     line-height: 27px;
   }
 }
